--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: My Jekyll Blog
 description: A simple blog powered by Jekyll and GitHub Pages
-author: Your Name
-email: your.email@example.com
-url: "https://username.github.io"
+author: Trevor Broadway
+email: trevor.broadway@gentivahs.com
+url: "https://github.com/Broadgaard/Blog"
